...

              const SizedBox(height: 18),

              SizedBox(
                width: double.infinity,
                child: CupertinoButton.filled(
                  key: const Key('addProductButton'),
                  borderRadius: BorderRadius.circular(25),
                  color: CupertinoTheme.of(context).primaryColor,
                  child: const Row(
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      Icon(CupertinoIcons.add_circled_solid),
...
                }
              });
            },
            child: const Text('Barcode'),
          ),
          CupertinoActionSheetAction(
            key: const Key('addManuallyAction'),
            onPressed: () {
              Navigator.pop(context);

              WidgetsBinding.instance.addPostFrameCallback((_) async {
                if (!mounted) return;
                final result = await Navigator.of(context).push(
...
